--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <p>モーダルの中身</p>
   <button onclick="closeModal()">閉じる</button>
 </div>
+<a href="file:///C:/Users/YourName/Documents" target="_blank">ドキュメントを開く</a>
 
 <script>
   function openModal() {
